Implemented Patient Operations

--- a/Assignments/Assignment 3/src/main/resources/templates/secretarySuccess.html
+++ b/Assignments/Assignment 3/src/main/resources/templates/secretarySuccess.html
@@ -6,8 +6,8 @@
 <h1>Success!</h1>
 <body>
 
-<form action="#" th:action="@{/goAdminHome}" method="get">
-    <p><input type="submit" class="button" value="Go To Homepage" name="goAdminHome" />
+<form action="#" th:action="@{/goSecretaryHome}" method="get">
+    <p><input type="submit" class="button" value="Go To Homepage" name="goSecretaryHome" />
 </form>
 
 <!--<form action="#" th:action="@{/seeAllUsers}" method="get">
