Implemented partially Consultaion Operations

--- a/Assignments/Assignment 3/src/main/resources/templates/userDeleteForm.html
+++ b/Assignments/Assignment 3/src/main/resources/templates/userDeleteForm.html
@@ -19,7 +19,7 @@
     </table>
 </form>
 
-<form action="#" th:action="@{/goHome}" method="get">
+<form action="#" th:action="@{/goAdminHome}" method="get">
     <p><input type="submit" class="button" value="Go To Homepage" name="goHome" />
 </form>
 
