--- a/Assignments/Assignment 3/src/main/resources/templates/userFound.html
+++ b/Assignments/Assignment 3/src/main/resources/templates/userFound.html
@@ -24,7 +24,7 @@
     </tbody>
 </table>
 
-<form action="#" th:action="@{/goHome}" method="get">
+<form action="#" th:action="@{/goAdminHome}" method="get">
     <p><input type="submit" class="button" value="Go To Homepage" name="goHome" />
 </form>
 
