--- a/Assignments/Assignment 3/src/main/resources/templates/UserFindForm.html
+++ b/Assignments/Assignment 3/src/main/resources/templates/UserFindForm.html
@@ -11,7 +11,7 @@
     <p><input type="submit" value="Submit" /> <input type="reset" value="Reset" /></p>
 </form>
 
-<form action="#" th:action="@{/goHome}" method="get">
+<form action="#" th:action="@{/goAdminHome}" method="get">
     <p><input type="submit" class="button" value="Go To Homepage" name="goHome" />
 </form>
 
