Implemented Consultation Operations on Doctor Availability

--- a/Assignments/Assignment 3/src/main/resources/templates/secretaryHome.html
+++ b/Assignments/Assignment 3/src/main/resources/templates/secretaryHome.html
@@ -18,5 +18,10 @@
     <p><input type="submit" class="button" value="Find Patient" name="findPatient" />
 </form>
 
+<form action="#" th:action="@{/makeAppointment}" method="get">
+    <p><input type="submit" class="button" value="Make an Appointment" name="makeAppointment" />
+</form>
+
+
 </body>
 </html>
