--- a/Assignments/Assignment 3/src/main/resources/templates/consultationUpdateForm.html
+++ b/Assignments/Assignment 3/src/main/resources/templates/consultationUpdateForm.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1>Insert Consultation Data</h1>
-<form action="#" th:action="@{/consultationCreateForm}" th:object="${consultationDto}" method="post">
+<form action="#" th:action="@{/consultationUpdateForm}" th:object="${consultationDto}" method="post">
     <table>
         <tr>
             <td>Doctor Name:</td>
@@ -22,6 +22,11 @@
             <td>Date Of Consultation:</td>
             <td><input type="date" th:field="*{dateOfConsultation}" /></td>
             <td th:if="${#fields.hasErrors('dateOfConsultation')}" th:errors="*{dateOfConsultation}">Date Of Consultation Error</td>
+        </tr>
+        <tr>
+            <td>Description to Add:</td>
+            <td><input type="text" th:field="*{description}" /></td>
+            <td th:if="${#fields.hasErrors('description')}" th:errors="*{description}">Description Error</td>
         </tr>
         <tr>
             <td><input type="submit" value="Submit" /> <input type="reset" value="Reset" /></td>
