--- a/Assignments/Assignment 3/src/main/resources/templates/findConsultations.html
+++ b/Assignments/Assignment 3/src/main/resources/templates/findConsultations.html
@@ -1,6 +1,13 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
+    <title>WebSocket Chat</title>
+    <link href="/webjars/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/main.css" rel="stylesheet">
+    <script src="/webjars/jquery/jquery.min.js"></script>
+    <script src="/webjars/sockjs-client/sockjs.min.js"></script>
+    <script src="/webjars/stomp-websocket/stomp.min.js"></script>
+    <script src="/doctor.js"></script>
     <title>Find Consultations Form</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
@@ -19,9 +26,27 @@
     </table>
 </form>
 
-<form action="#" th:action="@{/goSecretaryHome}" method="get">
-    <p><input type="submit" class="button" value="Go To Homepage" name="goHome" />
+<form action="#" th:action="@{/goDoctorHome}" method="get">
+    <p><input type="submit" id="goHome" class="button" value="Go To Homepage" name="goHome" />
 </form>
+
+<div id="main-content" class="container">
+    <div class="row">
+        <div class="col-md-12">
+            <table id="conversation" class="table table-striped">
+                <thead>
+                <tr>
+                    <th width="20%">Patient Name</th>
+                    <th width="20 %">Doctor Name</th>
+                    <th width="60%">Date</th>
+                </tr>
+                </thead>
+                <tbody id="messages">
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
 
 </body>
 </html>
